Correct alignment of notification widget

--- a/js/src/jupyter-gmaps.less
+++ b/js/src/jupyter-gmaps.less
@@ -12,3 +12,10 @@
   float: right !important;
   z-index: 10;
 }
+
+.gmaps-notification-widget {
+  height: 26px !important ;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  margin-right: 0px !important;
+}
